--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://admin:a123456@cluster0.tjka1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://<username:password>@cluster0.tjka1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
